Documentated every function, class and module of code
